@@ -590,7 +590,6 @@ specifies the file size for such optimization.
 @command{rsh} is an option for connecting to hosts within local
 networks since @command{rsh} is not as secure as other methods.
 
-
 @item @option{ssh}
 @cindex method ssh
 @cindex ssh method
@@ -610,7 +609,6 @@ host name, a hash sign, then a port number).  It is the same as passing
 Connecting to a remote host with @command{telnet} is as insecure
 as the @option{rsh} method.
 
-
 @item @option{su}
 @cindex method su
 @cindex su method
@@ -626,6 +624,16 @@ the host returned by the function @command{(system-name)}.  See
 
 Similar to @option{su} method, @option{sudo} uses @command{sudo}.
 @command{sudo} must have sufficient rights to start a shell.
+
+@item @option{sg}
+@cindex method sg
+@cindex sg method
+
+The @command{sg} program allows editing as different group.  The host
+can be either @samp{localhost} or the host returned by the function
+@command{(system-name)}.  The user name must be specified, but it
+denotes a group name.  See @ref{Multi-hops} for an exception to this
+behavior.
 
 @item @option{sshx}
 @cindex method sshx
@@ -663,7 +671,6 @@ This method is also similar to @option{ssh}.  It uses the
 
 This is another method from the Kerberos suite.  It behaves like @option{su}.
 
-
 @item @option{plink}
 @cindex method plink
 @cindex plink method
@@ -676,7 +683,6 @@ Check the @samp{Share SSH connections if possible} control for that
 session.
 
 @option{plink} method supports the @samp{-P} argument.
-
 
 @item @option{plinkx}
 @cindex method plinkx
@@ -754,7 +760,6 @@ is lost if the file exists only on one side of the connection.
 
 This method supports the @samp{-p} argument.
 
-
 @item @option{scpx}---@command{ssh} and @command{scp}
 @cindex method scpx
 @cindex scpx method
@@ -770,7 +775,6 @@ an error about allocating a pseudo tty.  This happens due to missing
 shell prompts that confuses @value{tramp}.
 
 This method supports the @samp{-p} argument.
-
 
 @item @option{pscp}---@command{plink} and @command{pscp}
 @item @option{psftp}---@command{plink} and @command{psftp}
@@ -794,7 +798,6 @@ Check the @samp{Share SSH connections if possible} control for that
 session.
 
 These methods support the @samp{-P} argument.
-
 
 @item @option{fcp}---@command{fsh} and @command{fcp}
 @cindex method fcp
@@ -838,7 +841,6 @@ decode programs.
 When @value{tramp} uses @option{ftp}, it forwards requests to whatever
 ftp program is specified by Ange FTP.  This external program must be
 capable of servicing requests from @value{tramp}.
-
 
 @item @option{smb}---@command{smbclient}
 @cindex method smb
@@ -910,7 +912,6 @@ access remote files using UNC file names instead of @value{tramp}:
 
 UNC file name specification does not allow to specify a different user
 name for authentication like the @command{smbclient} can.
-
 
 @item @option{adb}
 @cindex method adb
@@ -993,7 +994,6 @@ but with SSL encryption.  Both methods support the port numbers.
 OBEX is an FTP-like access protocol for cell phones and similar simple
 devices.  @value{tramp} supports OBEX over Bluetooth.
 
-
 @item @option{sftp}
 @cindex method sftp
 @cindex sftp method
@@ -1053,7 +1053,6 @@ using HTTP version 1.1 or later protocol support this command.
 For authentication, this protocol uses only @option{Basic
 Authentication} (see RFC 2617).  When no port number is specified, this
 protocol defaults to @option{8080}.
-
 
 @item @option{socks}
 @cindex method socks
@@ -1477,6 +1476,11 @@ A function dedicated to @file{/etc/hosts} for host names.
 @findex tramp-parse-passwd
 
 A function which parses @file{/etc/passwd} files for user names.
+
+@item @code{tramp-parse-etc-group}
+@findex tramp-parse-etc-group
+
+A function which parses @file{/etc/group} files for group names.
 
 @item @code{tramp-parse-netrc}
 @findex tramp-parse-netrc
